--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <ul>
             <li>Playing basketball</li>
             <li>Finish homework</li>
-            <li>Read lots of resources</uli </ul>
+            <li>Read lots of resources</ul>
                 <hr>
 
                 This website is created by Xun Zhu
@@ -192,8 +192,8 @@
 
     <p>Select a favorite japanese cartoon:</p>
     <div>
-        <input type="radio" id="One piece" name="drone" value="One piece" checked>
-        <label for="One piece">One piece</label>
+        <input type="radio" id="Onepiece" name="drone" value="Onepiece" checked>
+        <label for="Onepiece">One piece</label>
     </div>
 
     <div>
@@ -202,8 +202,8 @@
     </div>
 
     <div>
-        <input type="radio" id="Fairy Tales" name="drone" value="Fairy Tales">
-        <label for="Fairy Tales">Fairy Tales</label>
+        <input type="radio" id="FairyTales" name="drone" value="FairyTales">
+        <label for="FairyTales">Fairy Tales</label>
     </div>
 
 <hr>
@@ -216,8 +216,8 @@
 <input type="date" id="start" name="trip-start"
        value=""
        min="2021-01-01" max="2021-12-31">
-</body>
-<hr>
+</body><br>
+<br>
 <label for="story">Something I want to share here:</label>
 <br>
 <textarea id="story" name="story"
