--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang=”en”>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xun Zhu's First Web Page</title>
-    <link rel="stylesheet" href="">
+    <!-- <link rel="stylesheet"href=""> -->
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div>There are lots of things funny</div>
         <nav>
             <ul>
-                <li><a href="#2 day ago">2 day ago</a></li>
+                <li><a href="#2_day_ago">2_day_ago</a></li>
                 <li><a href="#yesterday">yesterday</a></li>
                 <li><a href="#today">today</a></li>
             </ul>
@@ -131,12 +131,12 @@
         </audio>
     </figure>
     <hr>
-    <p>First method to insert the video</p>
+<!--     <p>First method to insert the video</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gcMGqpyhilg" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        allowfullscreen></iframe> -->
     <hr>
-    <p>Second method to insert the video</p>
+    <p>Second method to insert the video, first one doesn't work.</p>
     <video width="320" height="240" controls>
         <source src="2.mp4" type="video/mp4">
     </video>
@@ -149,7 +149,7 @@
     </details>
     <hr>
     <footer>
-        <h2 id="2 day ago">2 day ago</h2>
+        <h2 id="2_day_ago">2 day ago</h2>
         <p>This is the story that I did 2 days ago.</p>
         <ul>
             <li>Playing basketball</li>
@@ -216,7 +216,8 @@
 <input type="date" id="start" name="trip-start"
        value=""
        min="2021-01-01" max="2021-12-31">
-</body><br>
+</body>
+<br>
 <br>
 <label for="story">Something I want to share here:</label>
 <br>
