--- a/index.html
+++ b/index.html
@@ -216,10 +216,8 @@
 <input type="date" id="start" name="trip-start"
        value=""
        min="2021-01-01" max="2021-12-31">
-</body>
-
-
-<br>
+</body><br>
+<hr>
 <label for="story">Something I want to share here:</label>
 <br>
 <textarea id="story" name="story"
