--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
        min="2021-01-01" max="2021-12-31">
 </body><br>
 <hr>
-<label for="story">Something I want to share here:</label>
-<br>
+<label for="story">Something I want to share here:</label><br>
 <textarea id="story" name="story"
           rows="10" cols="33">
 Life is hard, so please make youself happy!
