--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <style>
+        body {background-color: whitesmoke;}
+    </style>
+
 <head>
+    <link rel="stylesheet" href="lab3_style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xun Zhu's First Web Page</title>
@@ -11,9 +16,10 @@
 <body>
     <header>
         <div>
-            <h1>Home Page</h1>
+            <h1 style = "color: #F67EC2;">Home Page</h1>
         </div>
         <div>There are lots of things funny</div>
+
         <nav>
             <ul>
                 <li><a href="#2_day_ago">2_day_ago</a></li>
