--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
     <header>
-        <div>
+        <div class = "title">
             <h1 style = "color: #F67EC2;">Home Page</h1>
         </div>
-        <div>There are lots of things funny</div>
+        <div class = "intro">There are lots of things funny</div>
 
         <nav>
             <ul>
