--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <!-- <link rel="stylesheet"href=""> -->
 </head>
 
+<div class="box">
+    <h2>Background Colors</h2>
+    <p>This is the statement that we can choose our color <span>colors</span>.</p>
+  </div>
+
 <body>
     <header>
         <div class = "title">
@@ -28,10 +33,18 @@
             </ul>
         </nav>
         <hr />
-        <h1>This is to show the text size is h1</h1>
-        <h2>This is to show the text size is h2</h2>
-        <h3>This is to show the text size is h3</h3>
+        <h1 class = "top1">This is to show the text size is h1</h1>
+        <h2 class = "top2">This is to show the text size is h2</h2>
+        <h3 class = "top3">This is to show the text size is h3</h3>
         <h4>This is to show the text size is h4</h4>
+
+        <hr>
+        <div class="wrapper">
+            <div class="box1 px">I am 200px wide</div>
+            <div class="box1 vw">I am 10vw wide</div>
+            <div class="box1 em">I am 10em wide</div>
+          </div>
+
         <hr />
         <h2 id="today">today</h2>
         <p>This is what I doing today</p>
