--- a/index.html
+++ b/index.html
@@ -79,6 +79,82 @@
             <div class="box3">Testing the padding.</div>
           </div>
 
+<!-- very cool topic will show here -->
+
+<dl>
+    <div>
+      <dt>A</dt>
+      <dd>Anderson</dd>
+      <dd>Appointment</dd>
+      <dd>A$AP</dd>
+      <dd>Apple</dd>
+      <dd>Aston Martin</dd>
+    </div>
+    <div>
+      <dt>C</dt>
+      <dd>Cinema</dd>
+      <dd>Common</dd>
+      <dd>Christiano</dd>
+      <dd>Crystal</dd>
+      <dd>Curve</dd>
+    </div>
+    <div>
+      <dt>E</dt>
+      <dd>Edison Chen</dd>
+    </div>
+    <div>
+      <dt>T</dt>
+      <dd>Ted Leo &amp; The Pharmacists</dd>
+      <dd>Third</dd>
+      <dd>Thursday</dd>
+      <dd>TV On The Radio</dd>
+      <dd>Two Guns</dd>
+    </div>
+  </dl>
+
+<hr>
+
+<!-- Flex box place -->
+<div class="flex-container">
+    <div style="flex-grow: 1">1</div>
+    <div style="flex-grow: 1">2</div>
+    <div style="flex-grow: 8">3</div>
+  </div>
+<!--  -->
+<!-- <div class="flex">
+    <div style="flex-grow: 1">1</div>
+    <div style="flex-grow: 1">2</div>
+    <div style="flex-grow: 8">3</div>
+  </div> -->
+<!--  -->
+<div class="flex-container1">
+    <div>1</div>
+    <div>2</div>
+    <div style="flex-shrink: 0">3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+    <div>9</div>
+    <div>10</div>
+  </div>
+<!--  -->
+<!-- grid topic -->
+<div class="grid-container">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>  
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+  </div>
+
+<!-- main material? -->
+
+
         <hr />
         <h2 id="today">today</h2>
         <p>This is what I doing today</p>
