--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </style>
 
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Antonio:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="lab3_style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -50,7 +52,7 @@
             </ul>
         </nav>
         <hr />
-        <h1 class = "top1">This is to show the text size is h1</h1>
+        <h1 class = "top1 h1">This is to show the text size is h1</h1>
         <h2 class = "top2">This is to show the text size is h2</h2>
         <h3 class = "top3">This is to show the text size is h3</h3>
         <h4 class = "top4">This is to show the text size is h4</h4>
@@ -170,9 +172,10 @@
         <h1>This is the main topic of this website</h1>
         <h3>This is the place I want to go to travel</h3>
         <h3>Fuji Mountain</h3>
+        <p class = "photo">
         <img src="https://images.pexels.com/photos/4179793/pexels-photo-4179793.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
             alt="Fuji" width="550">
-
+</p>
         <section>
             <h2>Introduction</h2>
             <p><i><b>Mount Fuji</b> </i>(富士山, Fujisan, Japanese: [ɸɯꜜ(d)ʑisaɴ] (About this soundlisten)),
@@ -381,6 +384,15 @@ Life is hard, so please make youself happy!
 
 <br>
 <br>
+
+<input id="test" type="checkbox" />
+<div id = "mideaquery">
+<label for="test">Look at here, we are using the Midea Query here!</label>
+</div>
+<br>
+<br>
+
+
 
 <button class="decesion"
         type="button">
