--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Antonio:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="lab3_style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,14 +30,14 @@
       font-size: 1ex;
     }
     </style>
-    </head>
+   <!--  </head> -->
     <body>
     
     <div>The font-size of the div element is set to 30px. <span>The span element inside the div element has a font-size of 1ex</span>.</div>
     
-    </body>
+    <!-- </body>
   
-<body>
+<body> -->
     <header>
         <div class = "title">
             <h1 style = "color: #F67EC2;">Home Page</h1>
