--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <style>
         body {background-color: whitesmoke;}
     </style>
+    <style>
+        div {
+          font-size: 30px;
+          border: 1px solid black;
+        }
+        
+        span {
+          font-size: 1ex;
+        }
+        </style>
 
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,7 +30,7 @@
     <p>This is the statement that we can choose our color <span>colors</span>.</p>
   </div>
 
-  <style>
+  <!-- <style>
     div {
       font-size: 30px;
       border: 1px solid black;
@@ -29,7 +39,7 @@
     span {
       font-size: 1ex;
     }
-    </style>
+    </style> -->
    <!--  </head> -->
     <body>
     
