--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
     </style> -->
    <!--  </head> -->
-    <body>
+    <!-- <body> -->
     
     <div>The font-size of the div element is set to 30px. <span>The span element inside the div element has a font-size of 1ex</span>.</div>
     
@@ -408,7 +408,7 @@ Life is hard, so please make youself happy!
         type="button">
     I like this webpage!
 </button>
-</body>
+<!-- </body> -->
 
 
 
