--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         </style>
 
-<head>
+<!-- <head> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="lab3_style.css">
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xun Zhu's First Web Page</title>
     <!-- <link rel="stylesheet"href=""> -->
-</head>
+<!-- </head> -->
 
 <div class="box">
     <h2>Background Colors</h2>
