--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body> -->
     <header>
         <div class = "title">
-            <h1 style = "color: #F67EC2;">Home Page</h1>
+            <h1 style = "color: #F67EC2;">Xun Zhu's Home Page</h1>
         </div>
         <div class = "intro">There are lots of things funny</div>
 
