--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <div class = "title">
             <h1 style = "color: #F67EC2;">Xun Zhu's Home Page</h1>
         </div>
+        <div>
+            <p>This is my home page, I am a senior Computer Science student, going to graduate this quarter, create this page just for fun.</p>
+        </div>
         <div class = "intro">There are lots of things funny</div>
 
         <nav>
