--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xun Zhu's First Web Page</title>
+    <link rel="icon" type="image/x-icon" href="favicon.JPG">
     <!-- <link rel="stylesheet"href=""> -->
 <!-- </head> -->
 
